--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1391,6 +1391,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 /* Gallery */
 .gallery {
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .gallery-title {
@@ -1411,11 +1412,34 @@ textarea.form-input::-webkit-resizer { display: none; }
   min-width: calc(33.33% - 35px);
 }
 
+.image-container {
+  position: relative;
+  width: 100%;
+}
+
 .gallery-item img {
   width: 100%;
   height: auto;
   border-radius: 10px;
   object-fit: cover;
+}
+
+.caption {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  right: 10px;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  text-align: center;
+  padding: 5px;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.image-container:hover .caption {
+  opacity: 1;
 }
 
   /* service */
