--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -381,22 +381,13 @@ main {
 /*-----------------------------------*\
   #SIDEBAR
 \*-----------------------------------*/
-.toc-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  position: relative;
+.toc-title{
+  color: var(--white-2);
+  font-size: var(--fs-7);
 }
-
-.toc-item {
-  margin-bottom: 10px;  /* Adds spacing between items */
-}
-
-.toc-link {
+.toc-link{
   color: var(--white-2);
   font-size: var(--fs-8);
-  text-decoration: none;
-  display: block;  /* Makes the whole area clickable */
 }
 
 .toc-link:active {
