--- a/assets/css/clean_style.css
+++ b/assets/css/clean_style.css
@@ -1,12 +1,3 @@
-/*-----------------------------------*\
-  #style.css
-\*-----------------------------------*/
-
-
-/*-----------------------------------*\
-  #CUSTOM PROPERTY
-\*-----------------------------------*/
-
 :root {
 
     /**
@@ -40,6 +31,7 @@
     --onyx: hsl(240, 1%, 17%);
     --eerie-black-1: hsl(240, 2%, 13%);
     --eerie-black-2: hsl(240, 2%, 12%);
+    --eerie-black-3: hsl(0, 2%, 10%);
     --smoky-black: hsl(0, 0%, 7%);
     --white-1: hsl(0, 0%, 100%);
     --white-2: hsl(0, 0%, 98%);
@@ -291,127 +283,6 @@ article.active {
     width: 20px;
 }
 
-.content-card {
-    position: relative;
-    background: var(--border-gradient-onyx);
-    padding: 15px;
-    padding-top: 45px;
-    border-radius: 14px;
-    box-shadow: var(--shadow-2);
-    cursor: pointer;
-    z-index: 1;
-}
-
-.content-card::before {
-    content: "";
-    position: absolute;
-    inset: 1px;
-    background: var(--bg-gradient-jet);
-    border-radius: inherit;
-    z-index: -1;
-}
-
-
-
-
-
-/*-----------------------------------*\
-    #MAIN
-  \*-----------------------------------*/
-
-main {
-    margin: 15px 12px;
-    margin-bottom: 75px;
-    min-width: 259px;
-}
-
-/*-----------------------------------*\
-   #individual page 
-  \*-----------------------------------*/
-.h3-title {
-    color: white;
-    margin-top: 15px;
-    margin-bottom: 10px;
-}
-
-.project-text {
-    color: var(--light-gray);
-    font-size: var(--fs-6);
-    font-weight: var(--fw-300);
-    line-height: 1.6;
-}
-
-.project-text p {
-    margin-bottom: 15px;
-}
-
-/* Container for the entire project section */
-.project-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 40px;
-    /* Space between projects */
-    gap: 20px;
-}
-
-/* Text content on the left */
-.project-text-content {
-    color: var(--light-gray);
-    font-size: var(--fs-6);
-    flex: 1;
-    max-width: 50%;
-    /* Limit text column width to 45% of container */
-    padding: 20px;
-}
-
-/* Image content on the right, using Grid to layout images in 2 columns */
-.project-image-grid {
-    flex: 1;
-    max-width: 100%;
-    /* Limit image column width to 45% of container */
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    /* Create two equal columns */
-    gap: 5px;
-}
-
-/* Ensure full width for single images in case of an odd number of images */
-.project-image-grid .signlepage-project-image-wrapper:nth-child(odd):last-child {
-    grid-column: span 2;
-    /* Make the last image span both columns if it's alone */
-}
-
-/* For small screens, stack the text and images */
-@media (max-width: 768px) {
-    .project-container {
-        flex-direction: column;
-    }
-
-    .project-text-content,
-    .project-image-grid {
-        max-width: 100%;
-        /* Full width for small screens */
-    }
-}
-
-.signlepage-project-image {
-    border-radius: 14px;
-    width: 100%;
-    /* Makes the image half the width of its container */
-    display: block;
-    margin: 0 auto;
-    /* Centers the image */
-}
-
-.signlepage-project-caption {
-    margin-top: 10px;
-    /* Adds some space between the image and the caption */
-    color: white;
-    text-align: center;
-}
-
-
-
 
 
 /*-----------------------------------*\
@@ -662,11 +533,6 @@ main {
 
 
 
-
-
-
-
-
 /*-----------------------------------*\
     #RESPONSIVE
   \*-----------------------------------*/
@@ -850,128 +716,6 @@ main {
         --fs-8: 14px;
     }
 
-
-
-    /**
-     * #ABOUT
-     */
-
-    .about .article-title {
-        margin-bottom: 20px;
-    }
-
-    .about-text {
-        margin-bottom: 40px;
-    }
-
-    /* Gallery */
-    .gallery {
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-
-    .gallery-title {
-        margin-bottom: 15px;
-    }
-
-    .gallery-list {
-        display: flex;
-        gap: 20px;
-        margin: 0;
-        padding: 20px;
-        overflow-x: auto;
-        scroll-padding-inline: 20px;
-        white-space: nowrap;
-        /* Ensure horizontal scrolling */
-    }
-
-    .gallery-item {
-        flex: 0 0 auto;
-        /* Prevent flex-grow and flex-shrink */
-        min-width: calc(33.33% - 20px);
-        /* Adjust width calculation */
-        max-width: 300px;
-        /* Set a maximum width for gallery items */
-    }
-
-    .image-container {
-        position: relative;
-        width: 100%;
-        max-width: 300px;
-        /* Set a maximum width for image container */
-    }
-
-    .gallery-item img {
-        width: 100%;
-        height: auto;
-        border-radius: 10px;
-        object-fit: cover;
-        max-width: 100%;
-        /* Ensure images don't exceed their container */
-    }
-
-    .caption {
-        position: absolute;
-        bottom: 10px;
-        left: 10px;
-        right: 10px;
-        background: rgba(0, 0, 0, 0.7);
-        color: white;
-        text-align: center;
-        padding: 5px;
-        border-radius: 5px;
-        opacity: 0;
-        transition: opacity 0.3s;
-    }
-
-    .image-container:hover .caption {
-        opacity: 1;
-    }
-
-    /* Media Queries */
-    @media (max-width: 768px) {
-        .gallery-list {
-            gap: 15px;
-            padding: 15px;
-        }
-
-        .gallery-item {
-            min-width: calc(50% - 15px);
-            /* Adjust for smaller screens */
-            max-width: none;
-        }
-
-        .image-container {
-            max-width: none;
-        }
-
-        .gallery-item img {
-            max-width: none;
-        }
-    }
-
-    @media (max-width: 480px) {
-        .gallery-list {
-            gap: 10px;
-            padding: 10px;
-        }
-
-        .gallery-item {
-            min-width: calc(100% - 10px);
-            /* Adjust for mobile screens */
-            max-width: none;
-        }
-
-        .image-container {
-            max-width: none;
-        }
-
-        .gallery-item img {
-            max-width: none;
-        }
-    }
-
-
 }
 
 /**
@@ -1013,75 +757,6 @@ main {
     .navbar-link {
         --fs-8: 15px;
     }
-
-
-
-    /**
-     * ABOUT
-     */
-
-    /* testimonials modal */
-
-    .testimonials-modal {
-        gap: 35px;
-        max-width: 680px;
-    }
-
-    /* Goal: scroll bar for my profolio project popup */
-
-
-
-    .modal-avatar-box img {
-        width: 80px;
-    }
-
-
-
-    /**
-     * PORTFOLIO
-     */
-
-    .article-title {
-        padding-bottom: 20px;
-    }
-
-    .filter-select-box {
-        display: none;
-    }
-
-    .filter-list {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 25px;
-        padding-left: 5px;
-        margin-bottom: 30px;
-    }
-
-    .filter-item button {
-        color: var(--light-gray);
-        font-size: var(--fs-5);
-        transition: var(--transition-1);
-    }
-
-    .filter-item button:hover {
-        color: var(--light-gray-70);
-    }
-
-    .filter-item button.active {
-        color: var(--neon-pink-highlight);
-    }
-
-    /* portfolio and blog grid */
-
-    .project-list,
-    .blog-posts-list {
-        grid-template-columns: 1fr 1fr;
-    }
-
-
-
-
 
 }
 
@@ -1236,6 +911,8 @@ main {
         min-width: 75%;
         width: 75%;
         margin: 0;
+        overflow: hidden;
+        /* Prevent overflow */
     }
 
 
@@ -1305,232 +982,6 @@ main {
     }
 
 
-
-    /**
-       * RESUME
-       */
-
-    .timeline-text {
-        max-width: 700px;
-    }
-
-}
-
-/* Gallery - life at a glance */
-.gallery {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.gallery-title {
-    margin-bottom: 15px;
-}
-
-.gallery-list {
-    display: flex;
-    gap: 20px;
-    margin: 0;
-    padding: 20px;
-    overflow-x: auto;
-    scroll-padding-inline: 20px;
-    white-space: nowrap;
-    /* Ensure horizontal scrolling */
-}
-
-.gallery-item {
-    flex: 0 0 auto;
-    /* Prevent flex-grow and flex-shrink */
-    min-width: calc(33.33% - 20px);
-    /* Adjust width calculation */
-    max-width: 300px;
-    /* Set a maximum width for gallery items */
-}
-
-.image-container {
-    position: relative;
-    width: 100%;
-    max-width: 300px;
-    /* Set a maximum width for image container */
-}
-
-.gallery-item img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    object-fit: cover;
-    max-width: 100%;
-    /* Ensure images don't exceed their container */
-}
-
-.caption {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    right: 10px;
-    background: rgba(0, 0, 0, 0.7);
-    color: white;
-    text-align: center;
-    padding: 5px;
-    border-radius: 5px;
-    opacity: 0;
-    transition: opacity 0.3s;
-}
-
-.image-container:hover .caption {
-    opacity: 1;
-}
-
-/* Media Queries */
-@media (max-width: 768px) {
-    .gallery-list {
-        gap: 15px;
-        padding: 15px;
-    }
-
-    .gallery-item {
-        min-width: calc(50% - 15px);
-        /* Adjust for smaller screens */
-        max-width: calc(50% - 15px);
-        /* Ensure max-width is applied */
-    }
-
-    .image-container {
-        max-width: 100%;
-        /* Ensure containers resize appropriately */
-    }
-
-    .gallery-item img {
-        max-width: 100%;
-        /* Ensure images resize appropriately */
-    }
-}
-
-@media (max-width: 480px) {
-    .gallery-list {
-        gap: 10px;
-        padding: 10px;
-    }
-
-    .gallery-item {
-        min-width: calc(100% - 10px);
-        /* Adjust for mobile screens */
-        max-width: calc(100% - 10px);
-        /* Ensure max-width is applied */
-    }
-
-    .image-container {
-        max-width: 100%;
-        /* Ensure containers resize appropriately */
-    }
-
-    .gallery-item img {
-        max-width: 100%;
-        /* Ensure images resize appropriately */
-    }
-}
-
-/* Tools Section */
-.tools {
-    margin-top: 35px;
-    margin-bottom: 35px;
-}
-
-.tools-title {
-    margin-bottom: 20px;
-}
-
-.tools-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    gap: 20px;
-    justify-content: center;
-    /* Center the grid content */
-}
-
-.tools-item {
-    position: relative;
-    background: var(--border-gradient-onyx);
-    padding: 20px;
-    border-radius: 14px;
-    box-shadow: var(--shadow-2);
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.tools-item::before {
-    content: "";
-    position: absolute;
-    inset: 1px;
-    background: var(--bg-gradient-jet);
-    border-radius: inherit;
-    z-index: -1;
-}
-
-.tools-icon-box {
-    margin-bottom: 10px;
-}
-
-.tools-icon-box img {
-    margin: auto;
-}
-
-.tools-content-box {
-    text-align: center;
-}
-
-.tools-item-title {
-    height: 2.5em;
-    display: flex;
-    margin-bottom: 7px;
-    color: var(--white-2);
-    font-size: var(--fs-6);
-}
-
-/* Media Queries */
-@media (max-width: 768px) {
-    .tools-list {
-        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-        gap: 15px;
-    }
-
-    .tools-item {
-        padding: 15px;
-    }
-
-    .tools-icon-box img {
-        width: 30px;
-        height: 30px;
-    }
-
-    .tools-item-title {
-        font-size: var(--fs-7);
-    }
-}
-
-@media (max-width: 480px) {
-    .tools-list {
-        grid-template-columns: repeat(3, 1fr);
-        /* 3 icons per row */
-        gap: 10px;
-    }
-
-    .tools-item {
-        padding: 10px;
-    }
-
-    .tools-icon-box img {
-        width: 50px;
-        /* Keep icon size large enough */
-        height: 50px;
-    }
-
-    .tools-item-title {
-        display: none;
-        /* Hide the text on mobile screens */
-    }
 }
 
 /*-----------------------------------*\
@@ -1545,8 +996,11 @@ main {
 }
 
 .project-card-large {
+    box-shadow: var(--shadow-1);
+    z-index: 1;
     position: relative;
-    background-color: var(--smoky-black);
+    background-color: var(--eerie-black-3);
+    border: 1px solid var(--jet);
     border-radius: 16px;
     overflow: hidden;
     display: flex;
@@ -1595,10 +1049,20 @@ main {
 }
 
 /* Project Grid */
+.main-content,
+.project-grid {
+    box-sizing: border-box;
+}
+
 .project-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    /* Two columns by default */
     gap: 2rem;
+    box-sizing: border-box;
+    /* Include padding and border in element width */
+    width: 100%;
+    /* Ensure the grid doesn't overflow */
 }
 
 .project-card {
@@ -1609,15 +1073,21 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    min-width: 0;
 }
 
 .project-image {
     border-radius: 12px;
     margin-bottom: 1rem;
+    width: 100%;
+    /* Make sure the image takes full width of the container */
+    object-fit: cover;
 }
 
 .project-info {
     text-align: left;
+    word-wrap: break-word;
+    /* Prevent text from overflowing */
 }
 
 .project-info h3 {
@@ -1634,7 +1104,7 @@ main {
 
 /*-----------------------------------*\
     #MEDIA QUERIES
-  \*-----------------------------------*/
+\*-----------------------------------*/
 
 /* Responsive layout for small screens */
 @media (max-width: 768px) {
@@ -1648,8 +1118,13 @@ main {
         margin-top: 1rem;
     }
 
-    .project-grid {
-        grid-template-columns: 1fr;
-        /* One column on small screens */
+    @media (max-width: 768px) {
+        .project-grid {
+            grid-template-columns: 1fr;
+            /* Switch to one column for smaller screens */
+            gap: 1rem;
+            /* Reduce gap for smaller screens */
+        }
     }
+
 }
