--- a/assets/css/clean_style.css
+++ b/assets/css/clean_style.css
@@ -245,10 +245,11 @@ article.active {
     font-size: var(--fs-7);
     font-weight: var(--fw-500);
 }
-
+/* adjust the space between the title and main-content  */
 .article-title {
     position: relative;
     padding-bottom: 7px;
+    margin-bottom: 1rem; /* Adds space below the title */
 }
 
 .article-title::after {
@@ -1066,7 +1067,8 @@ article.active {
 }
 
 .project-card {
-    background-color: var(--smoky-black);
+    background-color: var(--eerie-black-3);
+    border: 1px solid var(--jet);
     border-radius: 16px;
     padding: 1.5rem;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
@@ -1101,6 +1103,29 @@ article.active {
     color: var(--bittersweet-shimmer);
     margin-bottom: 1rem;
 }
+/* This is a tag css, can be use for any tag */
+.project-tag {
+    font-size: 0.9rem; /* Adjust to match your desired text size */
+    color: var(--fluorescent-pink); /* Text color matching your design */
+    padding: 0.5rem 1rem; /* Padding for inside spacing */
+    border-radius: 50px; /* Fully rounded corners */
+    background: linear-gradient(to right, hsl(311, 100%, 72%), hsl(317, 86%, 34%)); /* Gradient background */
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    font-weight: 500; /* Adjust font weight if needed */
+    z-index: 1;
+}
+
+.project-tag::before {
+    content: "";
+    position: absolute;
+    top: 2px; bottom: 2px; left: 2px; right: 2px;
+    background-color: var(--smoky-black); /* Background of the tag itself */
+    border-radius: 50px; /* Ensure rounded corners for the inner background */
+    z-index: -1;
+}
+
 
 /*-----------------------------------*\
     #MEDIA QUERIES
