--- a/assets/css/ursa_style.css
+++ b/assets/css/ursa_style.css
@@ -1176,12 +1176,53 @@ article.active {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
     padding: 20px;
-    background-color: #2b2b2b;
     border-radius: 10px;
     margin: 20px 0;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    color: #fff;
 }
+
+.img-overlay-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 10px; /* Same as the section */
+}
+
+.background-img {
+    width: 100%;
+    height: 100%;
+    object-fit: fit; /* Ensures the image covers the area while maintaining aspect ratio */
+    opacity: 0.7; /* You can adjust this for transparency if you don't want to use the overlay */
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Dark overlay */
+    border-radius: 10px;
+}
+
+.project-info, .project-details {
+    z-index: 1; /* Ensures the text appears above the image and overlay */
+}
+
+.project-title, .project-description {
+    color: #fff;
+}
+
+.time-duration h3 {
+    color: #00ff00;
+}
+/* ------- */
 
 .project-info {
     max-width: 70%; /* Adjust to control width */
@@ -1194,12 +1235,6 @@ article.active {
     font-weight: bold;
 }
 
-.project-description {
-    font-size: 1.1em;
-    color: #cfcfcf;
-    margin-bottom: 10px;
-    line-height: 1.6;
-}
 
 .project-details {
     background-color: #333;
@@ -1235,19 +1270,9 @@ article.active {
 
 /* overview */
 .overview-section {
-    text-align: center;
     margin-bottom: 40px;
 }
 
-
-.overview-description {
-    font-size: 1.2em;
-    color: #cfcfcf;
-    margin-bottom: 30px;
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-}
 
 .overview-subheading {
     font-size: 1.4em;
@@ -1258,27 +1283,38 @@ article.active {
     margin-right: auto;
 }
 
-.challenges {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
+/* Images with Text */
 
-.challenge-item {
-    width: 22%;
+
+.challenges-image-container {
+    width: 30%;
+    background-color: #444;
+    padding: 20px;
+    border-radius: 15px;
     text-align: center;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s ease-in-out;
 }
 
-.challenge-item img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
+.challenges-image-container:hover {
+    transform: scale(1.05);
+}
+
+
+.icon {
     margin-bottom: 10px;
 }
 
-.challenge-item p {
-    font-size: 1em;
-    color: #f5f5f5;
+.challenges-image-container img {
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+.icon {
+    width: 20%;
+    text-align: center;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 /* Design hightlights */
@@ -1287,13 +1323,6 @@ article.active {
     margin-bottom: 40px;
 }
 
-
-.highlight-row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 30px;
-}
 
 .highlight-item {
     width: 48%;
@@ -1307,47 +1336,9 @@ article.active {
     margin-bottom: 10px;
 }
 
-.highlight-title {
-    font-size: 1.3em;
-    color: #00ff00;
-    margin-bottom: 10px;
-}
 
-.highlight-description {
-    font-size: 1.1em;
-    color: #cfcfcf;
-}
-
-.opportunities {
-    background-color: #222;
-    padding: 20px;
-    border-radius: 10px;
-    margin-top: 30px;
-}
-
-.opportunities-title {
-    font-size: 1.8em;
-    color: #00ff00;
-    margin-bottom: 10px;
-}
-
-.opportunities-description {
-    font-size: 1.2em;
-    color: #cfcfcf;
-}
-
-.highlight-text {
-    font-size: 1.3em;
-    color: #00ff00;
-    text-align: center;
-}
 
 /* context */
-.context-section {
-    margin: 40px 0;
-    color: #f5f5f5;
-    text-align: center;
-}
 
 /* .user-details {
     display: flex;
@@ -1373,33 +1364,21 @@ article.active {
     color: #f5f5f5;
 }
 
-.user-info {
-    width: 65%;
-    text-align: left;
-}
-
+/* cunyi */
 .highlight-text {
     color: #00ff00;
     font-size: 1.3em;
 }
 
-.tasks-title {
-    font-size: 2em;
-    color: #00ff00;
-    margin-bottom: 30px;
-}
 
-.nasa-tasks {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
+
 
 .task-list {
-    width: 35%;
+    width: 50%;
     background-color: #333;
     border-radius: 10px;
     padding: 20px;
+    text-align: left;
 }
 
 .task-list ul {
@@ -1425,7 +1404,7 @@ article.active {
 }
 
 .task-diagram {
-    width: 60%;
+    width: 50%;
 }
 
 .task-diagram img {
@@ -1577,51 +1556,6 @@ article.active {
     border-radius: 8px;
 }
 /* reflection */
-.learnings-section {
-    margin: 40px 0;
-    color: #f5f5f5;
-}
-
-.learnings-content {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.icon-and-text {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 40px;
-}
-
-.vui-icon {
-    width: 80px;
-    height: 80px;
-    margin-right: 20px;
-}
-
-.text-content h4 {
-    font-size: 1.5em;
-    color: #00ff00;
-}
-
-.text-content p {
-    font-size: 1.2em;
-    color: #cfcfcf;
-    max-width: 700px;
-}
-
-.images-row {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 30px;
-}
-
-.image-item {
-    width: 30%;
-    text-align: center;
-}
-
 .image-item img {
     width: 100%;
     height: auto;
@@ -1634,6 +1568,62 @@ article.active {
     color: #cfcfcf;
 }
 /* shared style */
+.horizontal-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 40px;
+}
+/* User icon */
+.user-icon img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: #e0e0e0;
+    display: inline-block;
+}
+.box {
+    background-color: #222;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 30px;
+  text-align: center;
+}
+/* ------------- */
+.user-box {
+    flex: 0 0 30%;
+}
+
+.challenge-box {
+    flex: 0 0 70%; 
+}
+/* ------------- */
+
+.project-basic-text {
+    font-size: 1.1em;
+    color: #cfcfcf;
+    margin-bottom: 10px;
+    line-height: 1.6;
+}
+.project-small-text {
+    font-size: 0.9em;
+    color: #cfcfcf;
+    margin-bottom: 10px;
+    line-height: 1.6;
+}
+.project-highlight-text {
+    color: #fff;             /* Black text */
+    font-weight: bold;        /* Bold the highlighted text */
+}
+/* this is the secondary title */
+.highlight-title {
+    font-size: 1.3em;
+    color: #00ff00;
+    margin-bottom: 10px;
+}
+.center{
+    text-align: center;
+}
 .section-title {
     font-size: 2em;
     color: #e0ffe0;
@@ -1663,6 +1653,14 @@ article.active {
     margin-bottom: 20px;
 }
 
+.divider {
+    /* Divider styling */
+    width: 3px;
+    height: 150px;
+    background-color: #00ff00;
+}
+
+
 .img-rounded {
     width: 100%;
     height: auto;
@@ -1671,12 +1669,6 @@ article.active {
 }
 
 /* Section-Specific Styles */
-.opportunities {
-    background-color: #222;
-    padding: 20px;
-    border-radius: 10px;
-    margin-top: 30px;
-}
 
 .opportunities-title {
     font-size: 1.8em;
@@ -1690,4 +1682,81 @@ article.active {
 .dialogue p {
     font-size: 1.1em;
     margin-bottom: 10px;
+}
+/* adding */
+/* Image content on the right, using Grid to layout images in 2 columns */
+.project-image-grid {
+    flex: 1;
+    max-width: 100%;
+    /* Limit image column width to 45% of container */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* Create two equal columns */
+    gap: 5px;
+  }
+  
+  /* Ensure full width for single images in case of an odd number of images */
+  .project-image-grid .signlepage-project-image-wrapper:nth-child(odd):last-child {
+    grid-column: span 2;
+    /* Make the last image span both columns if it's alone */
+  }
+  .signlepage-project-image {
+    border-radius: 14px;
+    width: 100%;
+    /* Makes the image half the width of its container */
+    display: block;
+    margin: 0 auto;
+    /* Centers the image */
+  }
+  
+  .signlepage-project-caption {
+    margin-top: 10px;
+    /* Adds some space between the image and the caption */
+    color: white;
+    text-align: center;
+  }
+  
+  
+  /* For small screens, stack the text and images */
+  @media (max-width: 768px) {
+    .project-text-content,
+    .project-image-grid {
+      max-width: 100%;
+      /* Full width for small screens */
+    }
+  }
+  /* ----hide n show */
+  .hidden-content {
+    display: none;
+}
+
+.toggle-arrow {
+    cursor: pointer;
+    font-size: 24px;
+    display: block;
+    text-align: center;
+    margin-top: 10px;
+    color: #0dff00;
+    animation: breathing 2s ease-in-out infinite; /* Add the breathing animation */
+}
+
+.toggle-arrow:hover {
+    color: #ffffff;
+    animation: none; /* Stop animation when hovered for a smooth transition */
+}
+
+/* Breathing animation */
+@keyframes breathing {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.1); /* Slightly increase size */
+        opacity: 0.7; /* Reduce opacity for a subtle effect */
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
